# dptb-pilot

./: .gitignore  DeePTB-agent-proposal.md  GEMINI.md  README.md  activate.sh  env.example  install.sh  pyproject.toml  start.sh  test_rag.py  versions.md
.github/: copilot-instructions.md
backend/: pyproject.toml
backend/better_aim/: __init__.py  adjustable_session_service.py  agent.py  host.py  load_mcp_tools.py  main.py  react_host.py  react_main.py  tool_modify_guardrail.py  utils.py
backend/dptb_agent_tools/: build_knowledge_base.py  env.py  init_mcp.py  main.py
backend/dptb_agent_tools/data/chroma_db/022af320-a033-4997-a12d-7cb31b3af58f/: index_metadata.pickle
backend/dptb_agent_tools/data/chroma_db/5a50c49d-bdc2-4a26-90f1-e0f1ec00f4d4/: index_metadata.pickle
backend/dptb_agent_tools/data/chroma_db/8069e552-9475-468c-8075-35a8c35dee97/: index_metadata.pickle
backend/dptb_agent_tools/data/chroma_db/9fe83a73-7a93-4e35-a982-b52d31964065/: index_metadata.pickle
backend/dptb_agent_tools/data/chroma_db/ba2297d9-af76-481a-9d12-2f3a21088084/: index_metadata.pickle
backend/dptb_agent_tools/modules/: band.py  config_tool.py  fs_tool.py  mp_tool.py  rag_tool.py  sk_baseline_model.py  sk_predict.py
backend/dptb_agent_tools/modules/util/: comm.py  control.py
dptb_pilot/: main.py
dptb_pilot/core/: agent.py  guardrail.py  legacy_host.py  logger.py  photon_config.py  photon_service.py
dptb_pilot/server/: app.py
dptb_pilot/tools/: env.py  init.py  server.py
dptb_pilot/tools/modules/deeptb/: __init__.py  abacus.py  config_tool.py  convert.py  dftio.py  lammps.py  model_test.py  negf.py  predict.py  press_tube.py  results_unified.py  sk_baseline_model.py  sk_predict.py  strain.py
dptb_pilot/tools/modules/dpnegf/: __init__.py  results_unified.py  workflow_atoms.py
dptb_pilot/tools/modules/knowledge/: c2db_tool.py  cod_tool.py  rag_tool.py
dptb_pilot/tools/modules/util/: comm.py  download_artifact.py  get_dptb_path.py  get_file_path.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/Chat/: index.tsx
frontend/src/components/FilePanel/: index.tsx
frontend/src/components/Login/: index.tsx
frontend/src/contexts/: AppContext.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: i18n.ts
scripts/: build_kb.py
tests/: test_band_with_sk_model.py  test_convert_from_lammps_data.py  test_dpnegf_archive.py  test_dpnegf_build_supercell.py  test_dpnegf_prepare_lammps.py  test_dpnegf_prepare_negf.py  test_executor_generation.py  test_press_tube.py  test_uniaxial_strain.py
tests/resources/: 10_0.vasp  POSCAR_-3  relaxed+3.data  relaxed-3.data
web_ui/: index.html  package-lock.json  package.json  vite.config.ts
web_ui/src/: index.css
web_ui/src/contexts/: AppContext.tsx
web_ui/src/services/: api.ts
web_ui/src/types/: index.ts
web_ui/src/utils/: i18n.ts
(+34 files in other folders)
