[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dptb_pilot_backend"
version = "0.1.0"
description = "Unified backend for dptb-pilot"
requires-python = ">=3.10"
dependencies = [
    "LiteLlm",
    "google-adk",
    "gradio",
    "mcp>=1.9.0",
    "bohr-agent-sdk",
    "python-dotenv",
    "chromadb",
    "sentence-transformers",
    "opentelemetry-sdk<1.39.0",
    "pypdf"
]

[project.scripts]
dptb-pilot = "better_aim.react_main:main"
dptb-tools = "dptb_agent_tools.main:main"

[tool.setuptools]
package-dir = { "" = "backend" }

[tool.setuptools.packages.find]
where = ["backend"]
include = ["better_aim*", "dptb_agent_tools*"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
addopts = "-v"
