[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dptb_pilot"
version = "0.1.0"
description = "Unified AI Pilot for DeePTB"
requires-python = ">=3.10"
dependencies = [
    "LiteLlm",
    "google-adk",
    "gradio",
    "mcp>=1.9.0",
    "bohr-agent-sdk",
    "python-dotenv",
    "chromadb",
    "sentence-transformers",
    "opentelemetry-sdk<1.39.0",
    "pypdf",
    "mp-api<0.42.0",
    "emmet-core<0.84.0",
    "typing-extensions",
    "pymatgen",
    "torch==2.5.0",
    "torch-scatter>=2.1.2",
    "httpx[socks]",
    "dptb",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'"
]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.uv.sources]
dptb = { git = "https://github.com/deepmodeling/DeePTB" }

[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]

[project.scripts]
dptb-pilot = "dptb_pilot.main:main"
dptb-tools = "dptb_pilot.tools.server:main"

[tool.setuptools]
packages = ["dptb_pilot", "dptb_pilot.core", "dptb_pilot.server", "dptb_pilot.tools", "dptb_pilot.tools.modules"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v"
